--- a/src/components/WeatherForecastList.css
+++ b/src/components/WeatherForecastList.css
@@ -1,6 +1,7 @@
 .holder {
     margin-top: 20px !important;
-    height: 70vh;
+    min-height: 45vh;
+    max-height: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
