--- a/src/components/WeatherForecastTile.css
+++ b/src/components/WeatherForecastTile.css
@@ -1,16 +1,23 @@
 html,
 body {
   font-family: 'Roboto', 'sans-serif';
+  background: url('http://img1.wsimg.com/isteam/stock/29950');
+  overflow: hidden;
 }
 
 .text--bold {
   font-weight: bold;
 }
 
-.weather {
-  width: 100%;
-  height: 150px;
+.grid .column {
   cursor: pointer;
+}
+
+.weather {
+  width: 82%;
+  height: 150px;
+  border-radius: 100%;
+  margin-bottom: 20px;
 }
 
 .sun {
